PR15350, Fix compressed debug sections for PE targets

PR 15350
	* bfd.c (bfd_update_compression_header): Write zlib header for
	formats other than ELF too.